# SerpentiPy

./: .gitignore  README.md  fpy  pyproject.toml  spyp  test.spyp
examples/: hello.spyp
fastpy/: cache.py  cli.py  native.py  runner.py  version.py
serpentipy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
