[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "serpentipy"
version = "2.0.2"
description = "SerpentiPy: AOT-compiled .spyp runner (Nuitka native backend). Requires gcc or clang."
readme = "README.md"
dependencies = ["nuitka>=2.0"]
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "mylinuxmailbox-code" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/mylinuxmailbox-code/SerpentiPy"

# Installs a real 'spyp' executable on PATH — no ./ or chmod needed.
[project.scripts]
spyp = "fastpy.cli:main"

[tool.setuptools]
packages = ["fastpy"]
